--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,6 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:id="@+id/edittext"
         android:padding="@dimen/app_margin"
         android:layout_margin="@dimen/app_margin"
         android:layout_gravity="center"
